--- a/website/css/master.css
+++ b/website/css/master.css
@@ -5,24 +5,67 @@ header {
   margin-bottom: 25em;
 }
 main {
-  text-align: center;
+
 }
-#personsNav{
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 40px;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+/* The container <div> - needed to position the dropdown content */
+#dropdownMenu {
+    position: relative;
+    display: inline-block;
+    right: 0px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+#personNav{
   list-style: none;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
   width: 80%;
 }
-.arrows {
-  font-size: 90px;
-  text-decoration: none;
-}
+
 .picLinks{
   max-width: 220px;
+  margin: 1em;
   border-radius: 100%;
+
 }
 
 @media (max-width: 1100px) {
@@ -36,7 +79,7 @@ main {
   }
 }
 @media (max-width: 480px) {
-    #personsNav {
+    #personNav {
       width: 90%;
     }
     .picLinks {
